# backendI

aulas/aula10/: Dockerfile  docker-compose.yml  pyproject.toml
aulas/aula10/api/: main.py
aulas/aula11/: Dockerfile  docker-compose.yml  pyproject.toml
aulas/aula11/api/: main.py
aulas/aula11b/: Dockerfile  docker-compose.yml  pyproject.toml
aulas/aula11b/api/: main.py  models.py
aulas/aula11b/api/routes/: products.py
aulas/aula12/: Dockerfile  docker-compose.yaml  pyproject.toml
aulas/aula12/api/: clients.py  main.py  models.py
aulas/aula12/api/routes/: eats.py
aulas/aula14/: Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
aulas/aula14/.devcontainer/: devcontainer.json
aulas/aula14/aula14/: asgi.py  settings.py  urls.py  wsgi.py
aulas/aula14/products/: admin.py  models.py  urls.py  views.py
aulas/aula15/.devcontainer/scripts/: setup-aws-cli.sh  setup-dotnet-sdk.sh  setup-node.sh  setup-nvm.sh  setup-oh-my-zsh.sh  setup-packages.sh  setup-user-npmrc.sh  setup-user.sh
aulas/aula16/: db.sqlite3  manage.py  pyproject.toml
aulas/aula16/aula16/: asgi.py  settings.py  urls.py  wsgi.py
aulas/aula16/posts/: admin.py  models.py  urls.py  views.py
aulas/aula16/posts/migrations/: 0001_initial.py
aulas/aula16/posts/templates/post/: post_list.html
aulas/aula16/products/: apps.py  models.py  urls.py  views.py
aulas/aula16/products/migrations/: 0001_initial.py
aulas/aula16/products/templates/products/: product_list.html
aulas/aula4/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aulas/aula4/exercise/src/: cli.py
aulas/aula4/src/: cli.py  comand.py
aulas/aula5/: pyproject.toml
aulas/aula5/src/: run.py
aulas/aula5/tests/: test_cli.py
aulas/aula6/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
aulas/aula6/eticbot/: app.py
aulas/aula7/: Makefile  docker-compose.yaml  pyproject.toml
aulas/aula8/: Makefile  docker-compose.yaml  pyproject.toml
aulas/aula8/eticgpt/: bot.py  clients.py  models.py  run.py
exercise/discord/: boot.py
exercise/src/: cli.py
leetcode/TwoSuns/: main.py
projectarefas/: app.py  comand.py  expri.py
projectdjnago/: Dockerfile  manage.py  pyproject.toml
projectdjnago/projectfinal/: asgi.py  settings.py  urls.py  wsgi.py
